--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -11,6 +11,9 @@
      "iopub.status.idle": "2022-12-29T07:03:03.538100Z",
      "shell.execute_reply": "2022-12-29T07:03:03.537115Z",
      "shell.execute_reply.started": "2022-12-29T07:03:01.120878Z"
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -20,13 +23,13 @@
      "text": [
       "Collecting tensorboardX\n",
       "  Downloading tensorboardX-2.5.1-py2.py3-none-any.whl (125 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m125.4/125.4 kB\u001b[0m \u001b[31m23.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from tensorboardX) (1.23.1)\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m125.4/125.4 kB\u001B[0m \u001B[31m23.8 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\n",
+      "\u001B[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from tensorboardX) (1.23.1)\n",
       "Requirement already satisfied: protobuf<=3.20.1,>=3.8.0 in /usr/local/lib/python3.9/dist-packages (from tensorboardX) (3.19.4)\n",
       "Installing collected packages: tensorboardX\n",
       "Successfully installed tensorboardX-2.5.1\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
+      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
+      "\u001B[0m"
      ]
     }
    ],
@@ -45,6 +48,9 @@
      "iopub.status.idle": "2022-12-29T07:10:34.279721Z",
      "shell.execute_reply": "2022-12-29T07:10:34.278988Z",
      "shell.execute_reply.started": "2022-12-29T07:07:46.679796Z"
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -56,15 +62,15 @@
       "  Cloning https://github.com/facebookresearch/detectron2.git to /tmp/pip-req-build-llo0z_rd\n",
       "  Running command git clone --filter=blob:none --quiet https://github.com/facebookresearch/detectron2.git /tmp/pip-req-build-llo0z_rd\n",
       "  Resolved https://github.com/facebookresearch/detectron2.git to commit 857d5de21a7789d1bba46694cf608b1cb2ea128a\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: Pillow>=7.1 in /usr/local/lib/python3.9/dist-packages (from detectron2==0.6) (9.2.0)\n",
+      "  Preparing metadata (setup.py) ... \u001B[?25ldone\n",
+      "\u001B[?25hRequirement already satisfied: Pillow>=7.1 in /usr/local/lib/python3.9/dist-packages (from detectron2==0.6) (9.2.0)\n",
       "Requirement already satisfied: matplotlib in /usr/local/lib/python3.9/dist-packages (from detectron2==0.6) (3.5.2)\n",
       "Collecting pycocotools>=2.0.2\n",
       "  Downloading pycocotools-2.0.6.tar.gz (24 kB)\n",
-      "  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: termcolor>=1.1 in /usr/local/lib/python3.9/dist-packages (from detectron2==0.6) (1.1.0)\n",
+      "  Installing build dependencies ... \u001B[?25ldone\n",
+      "\u001B[?25h  Getting requirements to build wheel ... \u001B[?25ldone\n",
+      "\u001B[?25h  Preparing metadata (pyproject.toml) ... \u001B[?25ldone\n",
+      "\u001B[?25hRequirement already satisfied: termcolor>=1.1 in /usr/local/lib/python3.9/dist-packages (from detectron2==0.6) (1.1.0)\n",
       "Collecting yacs>=0.1.8\n",
       "  Downloading yacs-0.1.8-py3-none-any.whl (14 kB)\n",
       "Collecting tabulate\n",
@@ -74,30 +80,30 @@
       "Requirement already satisfied: tensorboard in /usr/local/lib/python3.9/dist-packages (from detectron2==0.6) (2.9.1)\n",
       "Collecting fvcore<0.1.6,>=0.1.5\n",
       "  Downloading fvcore-0.1.5.post20221221.tar.gz (50 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.2/50.2 kB\u001b[0m \u001b[31m15.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting iopath<0.1.10,>=0.1.7\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m50.2/50.2 kB\u001B[0m \u001B[31m15.0 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\n",
+      "\u001B[?25h  Preparing metadata (setup.py) ... \u001B[?25ldone\n",
+      "\u001B[?25hCollecting iopath<0.1.10,>=0.1.7\n",
       "  Downloading iopath-0.1.9-py3-none-any.whl (27 kB)\n",
       "Collecting omegaconf>=2.1\n",
       "  Downloading omegaconf-2.3.0-py3-none-any.whl (79 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.5/79.5 kB\u001b[0m \u001b[31m20.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting hydra-core>=1.1\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m79.5/79.5 kB\u001B[0m \u001B[31m20.1 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\n",
+      "\u001B[?25hCollecting hydra-core>=1.1\n",
       "  Downloading hydra_core-1.3.1-py3-none-any.whl (154 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m154.1/154.1 kB\u001b[0m \u001b[31m31.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting black\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m154.1/154.1 kB\u001B[0m \u001B[31m31.0 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\n",
+      "\u001B[?25hCollecting black\n",
       "  Downloading black-22.12.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.6 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m82.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting timm\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m1.6/1.6 MB\u001B[0m \u001B[31m82.7 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\n",
+      "\u001B[?25hCollecting timm\n",
       "  Downloading timm-0.6.12-py3-none-any.whl (549 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m549.1/549.1 kB\u001b[0m \u001b[31m51.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: packaging in /usr/local/lib/python3.9/dist-packages (from detectron2==0.6) (21.3)\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m549.1/549.1 kB\u001B[0m \u001B[31m51.9 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\n",
+      "\u001B[?25hRequirement already satisfied: packaging in /usr/local/lib/python3.9/dist-packages (from detectron2==0.6) (21.3)\n",
       "Requirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from fvcore<0.1.6,>=0.1.5->detectron2==0.6) (1.23.1)\n",
       "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.9/dist-packages (from fvcore<0.1.6,>=0.1.5->detectron2==0.6) (5.4.1)\n",
       "Collecting antlr4-python3-runtime==4.9.*\n",
       "  Downloading antlr4-python3-runtime-4.9.3.tar.gz (117 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m117.0/117.0 kB\u001b[0m \u001b[31m28.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting portalocker\n",
+      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m117.0/117.0 kB\u001B[0m \u001B[31m28.3 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\n",
+      "\u001B[?25h  Preparing metadata (setup.py) ... \u001B[?25ldone\n",
+      "\u001B[?25hCollecting portalocker\n",
       "  Downloading portalocker-2.6.0-py2.py3-none-any.whl (15 kB)\n",
       "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.9/dist-packages (from matplotlib->detectron2==0.6) (0.11.0)\n",
       "Requirement already satisfied: pyparsing>=2.2.1 in /usr/local/lib/python3.9/dist-packages (from matplotlib->detectron2==0.6) (3.0.9)\n",
@@ -145,23 +151,23 @@
       "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /usr/local/lib/python3.9/dist-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard->detectron2==0.6) (0.4.8)\n",
       "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.9/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard->detectron2==0.6) (3.2.0)\n",
       "Building wheels for collected packages: detectron2, fvcore, antlr4-python3-runtime, pycocotools\n",
-      "  Building wheel for detectron2 (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for detectron2: filename=detectron2-0.6-cp39-cp39-linux_x86_64.whl size=5889223 sha256=ed1f701e1bc42d870d0d6fafd338e2a8e663f2847c8960619ecf38a4db0338ad\n",
+      "  Building wheel for detectron2 (setup.py) ... \u001B[?25ldone\n",
+      "\u001B[?25h  Created wheel for detectron2: filename=detectron2-0.6-cp39-cp39-linux_x86_64.whl size=5889223 sha256=ed1f701e1bc42d870d0d6fafd338e2a8e663f2847c8960619ecf38a4db0338ad\n",
       "  Stored in directory: /tmp/pip-ephem-wheel-cache-bzzpgw82/wheels/59/b4/83/84bfca751fa4dcc59998468be8688eb50e97408a83af171d42\n",
-      "  Building wheel for fvcore (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for fvcore: filename=fvcore-0.1.5.post20221221-py3-none-any.whl size=61406 sha256=669c4db5ec6509578bb39829693a8e5438fde1d0116ec668be64bf0261e0eb9f\n",
+      "  Building wheel for fvcore (setup.py) ... \u001B[?25ldone\n",
+      "\u001B[?25h  Created wheel for fvcore: filename=fvcore-0.1.5.post20221221-py3-none-any.whl size=61406 sha256=669c4db5ec6509578bb39829693a8e5438fde1d0116ec668be64bf0261e0eb9f\n",
       "  Stored in directory: /root/.cache/pip/wheels/83/42/02/66178d16e5c44dc26d309931834956baeda371956e86fbd876\n",
-      "  Building wheel for antlr4-python3-runtime (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for antlr4-python3-runtime: filename=antlr4_python3_runtime-4.9.3-py3-none-any.whl size=144554 sha256=ddfc41c7e0307f85e68b773551e1be87484cbe4ac68ba04bd4e2dc501dfb6c95\n",
+      "  Building wheel for antlr4-python3-runtime (setup.py) ... \u001B[?25ldone\n",
+      "\u001B[?25h  Created wheel for antlr4-python3-runtime: filename=antlr4_python3_runtime-4.9.3-py3-none-any.whl size=144554 sha256=ddfc41c7e0307f85e68b773551e1be87484cbe4ac68ba04bd4e2dc501dfb6c95\n",
       "  Stored in directory: /root/.cache/pip/wheels/23/cf/80/f3efa822e6ab23277902ee9165fe772eeb1dfb8014f359020a\n",
-      "  Building wheel for pycocotools (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pycocotools: filename=pycocotools-2.0.6-cp39-cp39-linux_x86_64.whl size=400228 sha256=a356c0450d2148ac9d590e3a6adc7b6e913d050be851a84ec830219795200de9\n",
+      "  Building wheel for pycocotools (pyproject.toml) ... \u001B[?25ldone\n",
+      "\u001B[?25h  Created wheel for pycocotools: filename=pycocotools-2.0.6-cp39-cp39-linux_x86_64.whl size=400228 sha256=a356c0450d2148ac9d590e3a6adc7b6e913d050be851a84ec830219795200de9\n",
       "  Stored in directory: /root/.cache/pip/wheels/2f/58/25/e78f1f766e904a9071266661d20d0bc6644df86bcd160aba11\n",
       "Successfully built detectron2 fvcore antlr4-python3-runtime pycocotools\n",
       "Installing collected packages: mypy-extensions, antlr4-python3-runtime, yacs, tomli, tabulate, portalocker, platformdirs, pathspec, omegaconf, iopath, hydra-core, black, timm, pycocotools, fvcore, detectron2\n",
       "Successfully installed antlr4-python3-runtime-4.9.3 black-22.12.0 detectron2-0.6 fvcore-0.1.5.post20221221 hydra-core-1.3.1 iopath-0.1.9 mypy-extensions-0.4.3 omegaconf-2.3.0 pathspec-0.10.3 platformdirs-2.6.2 portalocker-2.6.0 pycocotools-2.0.6 tabulate-0.9.0 timm-0.6.12 tomli-2.0.1 yacs-0.1.8\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
+      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
+      "\u001B[0m"
      ]
     }
    ],
@@ -180,6 +186,9 @@
      "iopub.status.idle": "2022-12-29T07:03:21.008057Z",
      "shell.execute_reply": "2022-12-29T07:03:21.006831Z",
      "shell.execute_reply.started": "2022-12-29T07:03:17.515153Z"
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -189,18 +198,18 @@
      "text": [
       "Collecting pyngrok==4.1.1\n",
       "  Downloading pyngrok-4.1.1.tar.gz (18 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: future in /usr/lib/python3/dist-packages (from pyngrok==4.1.1) (0.18.2)\n",
+      "  Preparing metadata (setup.py) ... \u001B[?25ldone\n",
+      "\u001B[?25hRequirement already satisfied: future in /usr/lib/python3/dist-packages (from pyngrok==4.1.1) (0.18.2)\n",
       "Requirement already satisfied: PyYAML in /usr/local/lib/python3.9/dist-packages (from pyngrok==4.1.1) (5.4.1)\n",
       "Building wheels for collected packages: pyngrok\n",
-      "  Building wheel for pyngrok (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pyngrok: filename=pyngrok-4.1.1-py3-none-any.whl size=15965 sha256=3669af38b11fcc66e95001ad9cdd77ad1da63d79252e42fe38331b06321ef59d\n",
+      "  Building wheel for pyngrok (setup.py) ... \u001B[?25ldone\n",
+      "\u001B[?25h  Created wheel for pyngrok: filename=pyngrok-4.1.1-py3-none-any.whl size=15965 sha256=3669af38b11fcc66e95001ad9cdd77ad1da63d79252e42fe38331b06321ef59d\n",
       "  Stored in directory: /root/.cache/pip/wheels/89/2d/c2/abe6bcfde6bce368c00ecd73310c11edb672c3eda09a090cfa\n",
       "Successfully built pyngrok\n",
       "Installing collected packages: pyngrok\n",
       "Successfully installed pyngrok-4.1.1\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
+      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
+      "\u001B[0m"
      ]
     }
    ],
@@ -219,6 +228,9 @@
      "iopub.status.idle": "2022-12-29T07:03:22.584809Z",
      "shell.execute_reply": "2022-12-29T07:03:22.583859Z",
      "shell.execute_reply.started": "2022-12-29T07:03:21.010677Z"
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -238,7 +250,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "70b46c0a-7f56-4cb0-a84c-836caf911ca4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
